[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/OnScreenMapUi/map.png" type="Texture" id=1]
[ext_resource path="res://ui/OnScreenMapUi/OnScreenMapUi.gd" type="Script" id=2]
[ext_resource path="res://ui/common/netherreich_theme.tres" type="Theme" id=3]

[node name="OnScreenMapUi" type="TextureRect"]
margin_right = 137.0
margin_bottom = 82.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="MapLoadFailureLabel" type="RichTextLabel" parent="."]
margin_left = 40.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 72.0
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "You are in
unknown
lands."
text = "You are in
unknown
lands."
__meta__ = {
"_edit_use_anchors_": false
}
